--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
-*{
-    margin: 0 ;
+body, html {
+    margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    overflow: hidden;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #222;
 }
 
-#canvas1{
-    border: 5px solid black;
-    position: absolute;
-    top: 50%;
-    left: 50% ;
-    transform: translate(-50%,-50%);
-    max-width: 100%;
-    max-height: 100%
+canvas {
+    border: 1px solid #fff;
 }
